# InstitutionPhysicsProjectCode

./: .gitignore  README.md  TODO.md  pyproject.toml
configs/pinns/: algorithm_model01.yaml  algorithm_model02.yaml
data/test_dataset/: ode_prediction_test.csv
doc/: 文献阅读总结.md
intuition_physics_ml/: __init__.py  __main__.py  cli.py  cli_pinns.py  config.py  ode_prediction_data.py  paths.py
intuition_physics_ml/models/: __init__.py
intuition_physics_ml/models/pinns/: __init__.py  pinns_input_normalizer.py  pinns_loss.py  pinns_net.py
intuition_physics_ml/training/: __init__.py
intuition_physics_ml/training/pinns/: __init__.py  pinns_config.py  pinns_dataloader.py  pinns_trainer.py
notebooks/: dsr_visualization.ipynb  ode_prediction_data_visualization.ipynb  pinns_visualization.ipynb
tests/: test_ode_prediction_data.py  test_pinns.py
