[project]
name = "institution-physics-ml"
version = "0.1.0"
description = "机构物理相关机器学习实验"
readme = false
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "torch",
    "torchvision",
]

[tool.uv]
package = false
