[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "intuition-physics-ml"
version = "0.1.0"
description = "直觉物理相关机器学习实验"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "torch",
    "torchvision",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
train-pinns = "intuition_physics_ml.cli_pinns:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
